feat: externalize database credentials and JWT secret; update configurations for security